# openauto-with-aasdk

./: .gitmodules  CMakeLists.txt  README.md
aasdk/aasdk_proto/: ButtonCodeEnum.proto
openauto/: CMakeLists.txt
openauto/include/f1x/openauto/autoapp/Configuration/: Configuration.hpp
openauto/include/f1x/openauto/autoapp/Projection/: QtAudioInput.hpp  QtAudioOutput.hpp
openauto/include/f1x/openauto/autoapp/UI/: SettingsWindow.hpp
openauto/src/autoapp/Configuration/: Configuration.cpp
openauto/src/autoapp/Projection/: InputDevice.cpp  LocalBluetoothDevice.cpp  QtAudioInput.cpp  QtAudioOutput.cpp  QtVideoOutput.cpp
openauto/src/autoapp/UI/: SettingsWindow.cpp  settingswindow.ui
